<resources>
    <string name="app_name">MpeiApp</string>
    <string name="appwidget_text">Текст</string>
    <string name="hello">Приветствую!</string>
    <string name="me">Это я, </string>
    <string name="dragonsava"> DragonSavA</string>
    <string name="thanks">Спасибо, что пользуешься MpeiApp, а теперь и созданным мною виджетом расписания!</string>
    <string name="warning">Важные моменты:</string>
    <string name="warn_refreshing"> - чтобы в виджет поступили актуальные данные, необходимо запустить приложение и дождаться окончания загрузки!</string>
    <string name="warn_sizes"> - размеры виджета можно изменить (пригодится, если вдруг все пары не умещаются)</string>
    <string name="enjoy">Приятного использования!</string>
    <string name="rating">P.S. Будет здорово, если ты оставишь отзыв о приложении:</string>
    <string name="rate_app">Оценить MpeiApp в Google Play</string>
    <string name="add_widget">Понятно, активировать виджет</string>
    <string name="app_widget_description">Виджет расписания MpeiApp</string>
    <string name="btnYesterday_text">Вчера</string>
    <string name="btnToday_text">Сегодня</string>
    <string name="btnTomorrow_text">Завтра</string>
    <string name="date_yesterday">Вчера</string>
    <string name="date_today">Сегодня</string>
    <string name="date_tomorrow">Завтра</string>
    <string name="date_text">Дата</string>
    <string name="schedule_time">Время</string>
    <string name="schedule_cabinet">Место</string>
    <string name="schedule_discipline">Дисциплина</string>
    <string name="schedule_lesson_type">Тип занятия</string>
    <string name="schedule_teacher">Преподаватель</string>
</resources>
